# improveDoc

./: .env.example  .gitignore  README.md  exemple.md  exemple_improved.md  improvedoc.py  pyproject.toml  requirements.txt
config/yaml/: agents.yaml  defaults.yaml
lib/: __init__.py  __main__.py  agents.py  config.py  enhancer.py  tools.py
src/improvedoc/: create_doc.py
src/lib/: agents.py  content_processor.py  creator.py  custom_embedder.py  enhancer.py  tools.py
